--- a/3-计算属性和侦听器/计算属性.html
+++ b/3-计算属性和侦听器/计算属性.html
@@ -26,7 +26,7 @@
                 },
                 firstName: 'Foo',
                 lastName: 'Bar',
-                fullName: 'Foo Bar'
+                // fullName: 'Foo Bar'
 
             }
         },
